--- a/Source/BmsSurvey.Domain/BmsSurvey.Domain.csproj
+++ b/Source/BmsSurvey.Domain/BmsSurvey.Domain.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BmsSurvey.Common\BmsSurvey.Common.csproj" />
   </ItemGroup>
 
