--- a/Source/BmsSurvey.Infrastructure/BmsSurvey.Infrastructure.csproj
+++ b/Source/BmsSurvey.Infrastructure/BmsSurvey.Infrastructure.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\BmsSurvey.Common\BmsSurvey.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
